
syntax = 'proto3';

option go_package = ".;proto";

service Master{
    rpc RequestJob(JobRequest) returns (Job) {};
    rpc CompleteJob(JobResult) returns (JobCompletion) {};
}

message JobRequest {
    int32 id = 1;
}

message Job {
    enum JobType {
    	SCRAPING = 0;
	CRAWLING = 1;
    }
    JobType type = 3;
    int32 id = 1;
    repeated string urls = 2;
}

message JobResult{
	Job job = 1;
	repeated string results = 2;
}

message JobCompletion{
	Job job = 1;
}
